# Dictate

./: .gitignore  Dictate.spec  README.md  _user_samples_out.txt  build.bat  build_native.bat  clinical_ui.py  clinical_ui_qt.py  config.json  focus_text.py  icon_loader.py  install_cpp_workload.bat  list_formatting.py  main.py  native_bridge.py  paste_learner.py  punctuation_assets.py  requirements.txt  spoken_punctuation.py  transcript_cleanup.py  ui.py  ui_qt.py  vocabulary.json  vocabulary.py
assets/: vocabulary.default.json  vocabulary.names.json  vocabulary.tech.json
assets/DictateHome/Screen/: README.md  package.json
assets/DictateHome/Screen/src/: App.tsx  index.css
assets/punctuation/: README.txt
clinical/: __init__.py  cleanup.py  llm.py  paths.py  pdf_export.py  recorder.py  service.py  storage.py
clinical/templates/: README.txt  comp_exam.json  crown.json  denture.json  extraction.json  filling.json  limited_exam.json  new_patient_exam.json  other.json
native/: CMakeLists.txt
native/include/: dictate_native.h
native/src/: audio_win.cpp  dictate_native.cpp  hotkey_win.cpp  paste_win.cpp
scripts/: benchmark_cleanup.py  download_punctuation_model.py  generate_icon.py  test_cleanup.py  test_list_formatting.py  test_paste_learner.py  test_spoken_punctuation.py  test_user_samples.py  test_vocabulary.py
